# simpledex

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  package.json
program/: .gitignore  Cargo.toml
program/src/: account.rs  entrypoint.rs  error.rs  fee.rs  lib.rs  packun.rs  pda.rs  processor.rs  state.rs  types.rs
program/src/checks/: account_meta.rs  mint.rs  mod.rs  offer.rs  pda.rs  program_id.rs  token_account.rs
program/src/instructions/: cancel_offer.rs  create_offer.rs  match_offers.rs  mod.rs  packun.rs
program/src/state/: holding.rs  mod.rs  offer.rs
program/tests/: cancel_offer.rs  create_offer.rs  match_offers.rs
program/tests/helpers/: mod.rs  simpledex_helpers.rs  spl_token_helpers.rs  sys_helpers.rs
simpledex-frontend/: README.md  package.json  tsconfig.json
simpledex-frontend/src/components/: MatchButton.tsx  WalletButton.tsx
simpledex-frontend/src/components/NewOrder/: NewOrder.tsx  TokenValueInputRow.tsx  index.tsx
simpledex-frontend/src/components/OpenOrders/: OpenOrderRow.tsx  OpenOrders.tsx  index.ts
simpledex-frontend/src/components/Orderbook/: Orderbook.tsx  OrderbookRow.tsx  index.ts
simpledex-frontend/src/contexts/: MarketContext.tsx  SolanaContext.tsx
simpledex-frontend/src/hooks/: useProvider.tsx
simpledex-frontend/src/pages/: _app.tsx  index.tsx
simpledex-frontend/src/styles/: globals.css  u.module.css
simpledex-frontend/src/utils/: bigint.ts  index.ts  tokenAcc.ts  tokenVal.ts  transaction.ts
ts/: .eslintrc.json  package.json  tsconfig.esm.json
ts/src/: consts.ts  index.ts  pda.ts  typeUtils.ts
ts/src/eventFilter/: eventFilter.ts  eventTypes.ts  index.ts  parse.ts
ts/src/instructions/: cancelOffer.ts  createOffer.ts  index.ts  matchOffers.ts  types.ts
ts/src/market/: err.ts  index.ts  market.ts  types.ts
ts/src/state/: err.ts  index.ts  offer.ts
