[package]
name = "simpledex"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018" # follows SPL

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.12" # mainnet-beta current vers
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] } # TODO: upgrade to 1.0.5 which no longer requires rent sysvar to be passed in
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "1.9.12"
solana-sdk = "1.9.12"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
